--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&display=swap');
 
 body {
     margin: 0;
     padding: 20px 40px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Encode Sans Condensed', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
